--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@tailwindcss/vite": "^4.1.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-helmet-async": "^2.0.5",
+    "react-parallax": "^3.5.2",
     "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^7.5.1",
     "swiper": "^11.2.6",
