--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-helmet-async": "^2.0.5",
+    "react-hook-form": "^7.56.0",
     "react-parallax": "^3.5.2",
     "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^7.5.1",
