--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-router-dom": "^7.5.1",
     "react-simple-captcha": "^9.3.1",
     "react-tabs": "^6.1.0",
+    "sweetalert2": "^11.19.1",
     "swiper": "^11.2.6",
     "tailwindcss": "^4.1.4"
   },
